@@ -424,3 +424,4 @@ Changes to the Mercury implementation:
 
 * Numerous bug fixes.
 
+* XXX remove the X debugger command
